caos-tool-window/syntax-highlighting/syntax-highlighting-furjan1.css
#caos-user-code{
  background-color: rgb(53,61,83);
}

span.syntax-variable, span.syntax-returning-command, span.syntax-operator, span.syntax-bool-op{
  color: rgb(255,51,187);
}

span.syntax-comment{
  color: rgb(67,255,134);
}

span.syntax-command, span.syntax-flow{
  color: rgb(46,161,255);
}

span.syntax-number-literal, span.syntax-string-literal{
  color: rgb(255,170,84);
}

